# reuniclus

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_signal.cpp  bench_spsc.cpp
data/: README.md
include/reuniclus/: ChannelSelector.hpp  ClinicalReport.hpp  ConnectomeDecoder.hpp  ConnectomeGraph.hpp  DifficultyController.hpp  InferenceWorker.hpp  Ingestor.hpp  KalmanFilter.hpp  LIFNetwork.hpp  LSLIngestor.hpp  Logger.hpp  NeuralEngine.hpp  NeuralFrame.hpp  PointProcessDecoder.hpp  SPSCRingBuffer.hpp  SignalProcessor.hpp  SyntheticIngestor.hpp  Telemetry.hpp  UDPIngestor.hpp  Version.hpp
models/: tcn_decoder.pt  tcn_eeg.pt
src/: main.cpp
tests/: test_channel_selector.cpp  test_kalman.cpp  test_signal.cpp  test_spsc.cpp
tools/: benchmark_moabb.py  compute_filter_coeffs.py  train_graph_decoder.py  train_tcn.py  train_tcn_eeg.py
